# kumify

./: .djlintrc  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  settings.dist.ini
kumify/: manage.py  settings.py  urls.py
kumify/api/: apps.py  urls.py  views.py
kumify/cbt/: apps.py  forms.py  models.py  views.py
kumify/common/: apps.py  fields.py  helpers.py
kumify/common/migrations/: 0001_initial.py
kumify/common/templatetags/: images.py  oidc.py  request.py
kumify/cronhandler/: apps.py  signals.py  urls.py  views.py
kumify/dreams/: admin.py  apps.py  features.py  forms.py  models.py  urls.py  views.py
kumify/dreams/migrations/: 0001_initial.py
kumify/dreams/templatetags/: dream_stats.py
kumify/environment/: apps.py
kumify/friends/: apps.py
kumify/frontend/: apps.py  classes.py  urls.py  views.py
kumify/frontend/templatetags/: dashboard.py  navigation.py
kumify/gpslog/: apps.py  models.py  urls.py  views.py
kumify/gpslog/migrations/: 0001_initial.py
kumify/habits/: apps.py  models.py
kumify/health/: apps.py  models.py
kumify/mood/: admin.py  apps.py  features.py  forms.py  models.py  statistics.py  urls.py  views.py
kumify/mood/migrations/: 0001_initial.py  0002_activity_hidden.py  0003_alter_mood_value.py
kumify/mood/templatetags/: mood_categories.py  mood_stats.py
kumify/msgio/: admin.py  apps.py  handler.py  helpers.py  models.py  signals.py  views.py
kumify/msgio/gateways/: matrix.py  telegram.py
kumify/msgio/migrations/: 0001_initial.py
kumify/profiles/: apps.py  forms.py  models.py  urls.py  views.py
kumify/profiles/migrations/: 0001_initial.py
locale/en/LC_MESSAGES/: django.po
moodyduck/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
moodyduck/api/: apps.py  serializers.py  tests.py  urls.py  views.py
moodyduck/cbt/: admin.py  apps.py  features.py  forms.py  models.py  urls.py  views.py
moodyduck/cbt/migrations/: 0001_initial.py
moodyduck/common/: apps.py  fields.py  helpers.py
moodyduck/common/migrations/: 0002_delete_userprofile.py
moodyduck/common/templatetags/: images.py  oidc.py  request.py
moodyduck/cronhandler/: apps.py  signals.py  urls.py  views.py
moodyduck/dreams/: admin.py  apps.py  features.py  forms.py  models.py  urls.py  views.py
moodyduck/dreams/migrations/: 0001_initial.py  0002_icon_phosphor_migration.py  0003_alter_theme_icon_alter_themerating_icon.py
moodyduck/environment/: admin.py  apps.py  features.py  forms.py  models.py  urls.py  views.py
moodyduck/environment/migrations/: 0001_initial.py  0002_icon_phosphor_migration.py  0003_alter_co2category_icon.py
moodyduck/friends/: admin.py  apps.py  features.py  forms.py  models.py  urls.py  views.py
moodyduck/friends/migrations/: 0001_initial.py  0002_person_emergency_contact_person_relationship.py
moodyduck/frontend/: apps.py  classes.py  mixins.py  urls.py  views.py
moodyduck/gpslog/: apps.py  models.py  urls.py  views.py
moodyduck/habits/: admin.py  apps.py  commands.py  features.py  forms.py  models.py  urls.py  views.py
moodyduck/health/: admin.py  apps.py  features.py  forms.py  models.py  urls.py  views.py
moodyduck/mood/: admin.py  apps.py  commands.py  features.py  forms.py  models.py  urls.py  views.py
moodyduck/msgio/: admin.py  apps.py  base.py  commands.py  handler.py  helpers.py  models.py  registry.py  signals.py  views.py
moodyduck/profiles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+154 files in other folders)
