[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kumify"
version = "0.1.0"
authors = [{ name = "Kumi Mitterer", email = "kumify@kumi.email" }]
description = "A Django-based application for managing your life."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django[argon2]",
    "django-colorfield",
    "django-multiupload",
    "django-storages",
    "django-polymorphic@git+https://github.com/jazzband/django-polymorphic.git@v4.0.0a",
    "django-multiselectfield@git+https://git.private.coffee/kumi/django-multiselectfield.git",
    "django-multiupload@git+https://github.com/Chive/django-multiupload.git",
    "dbsettings",
    "django-filtersignals",
    "mysqlclient",
    "boto3",
    "argon2_cffi",
    "python-telegram-bot",
    "python-dateutil",
    "matrix-nio",
    "holoviews",
    "bokeh",
    "panel",
    "scipy",
    "channels",
    "django-autosecretkey",
    "mozilla-django-oidc",
    "python-gnupg",
    "django-crispy-forms",
    "crispy-bootstrap4",
    "django-annoying"
]

[project.scripts]
kumify = "kumify.manage:main"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "https://git.private.coffee/kumi/kumify"
"Bug Tracker" = "https://git.private.coffee/kumi/kumify/issues"
"Source Code" = "https://git.private.coffee/kumi/kumify"
